- added sharing(few bugs still existing) - fixed bug with not centered images

--- a/poll/jteam/tabserver/html/class.css
+++ b/poll/jteam/tabserver/html/class.css
@@ -518,4 +518,5 @@ text-decoration: underline;
 }
 .imageURL {
 	border: 0;
+	vertical-align: middle
 }
